@@ -1,3 +1,11 @@
+2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf.h,
+	* gameswf/gameswf_font.*,
+	* gameswf/gameswf_text.*,
+	* gameswf/gameswf_freetype.*:
+	Work with dynamic fonts
+	
 2007-06-03  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_font.cpp,
